Stop ::first-letter from breaking surrogate pairs

This patch makes FirstLetterPseudoElement::FirstLetterLength() consider
surrogate pairs, to stop surrogate pairs broken between first letter and
remaining text.

Bug: 723848
Change-Id: I62753b82d324c163ede45d96a9a4e7c1a3601e45
Reviewed-on: https://chromium-review.googlesource.com/616462
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494921}
Former-commit-id: 02d9bf5911935920465f10eac7b62b718851b401