third_party/WebKit/Source/core/dom/FirstLetterPseudoElement.h
@@ -36,7 +36,7 @@ class Element;
 class LayoutObject;
 class LayoutTextFragment;
 
-class FirstLetterPseudoElement final : public PseudoElement {
+class CORE_EXPORT FirstLetterPseudoElement final : public PseudoElement {
   WTF_MAKE_NONCOPYABLE(FirstLetterPseudoElement);
 
  public:
